--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -28,5 +28,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm install
-      - run: npm test
+      - run: yarn install
+      - run: yarn test
+      - run: yarn lint
