--- a/.github/workflows/ci_check.yml
+++ b/.github/workflows/ci_check.yml
@@ -1,4 +1,4 @@
-name: Super-Linter
+name: CI checks (lint, typecheck, unit tests, build)
 
 # Run this workflow every time a new commit pushed to your repository
 on: push
@@ -52,7 +52,7 @@ jobs:
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-11111-${{ hashFiles('./yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
 
