--- a/.github/workflows/ci_check.yml
+++ b/.github/workflows/ci_check.yml
@@ -22,9 +22,13 @@ jobs:
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-11111-${{ hashFiles('./yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+
+      - name: Install Dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: echo "CACHE HIT FAILED!"
 
       - name: Checkout code
         uses: actions/checkout@v2
@@ -55,6 +59,10 @@ jobs:
           key: ${{ runner.os }}-yarn-11111-${{ hashFiles('./yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+
+      - name: Install Dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: echo "CACHE HIT FAILED!"
 
       - name: Checkout code
         uses: actions/checkout@v2
