--- a/.github/workflows/ci_check.yml
+++ b/.github/workflows/ci_check.yml
@@ -24,7 +24,7 @@ jobs:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-11111-${{ hashFiles('./yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-yarn-npm
 
       - name: Install Dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
@@ -58,7 +58,7 @@ jobs:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-11111-${{ hashFiles('./yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-yarn-npm
 
       - name: Install Dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
