--- a/.github/workflows/ci_check.yml
+++ b/.github/workflows/ci_check.yml
@@ -22,7 +22,7 @@ jobs:
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-11111-${{ hashFiles('./yarn.lock') }}
+          key: ${{ runner.os }}-yarn-e56456456456-${{ hashFiles('./yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-npm
 
@@ -56,7 +56,7 @@ jobs:
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-11111-${{ hashFiles('./yarn.lock') }}
+          key: ${{ runner.os }}-yarn-e56456456456-${{ hashFiles('./yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-npm
 
